destionationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: first-app
  namespace: staging
spec:
  host: first-app
  subsets:
  - name: v1
    labels:
      app: first-app
      version: v1
  - name: v2
    labels:
      app: first-app
      version: v2
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: first-app
  namespace: staging
spec:
  host: first-app
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      app: first-app
      version: v1
  - name: v2
    labels:
      app: first-app
      version: v2
