virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: first-app
  namespace: staging
spec:
  hosts:
  - first-app
  http:
  - route:
    - destination:
        host: first-app
        subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: first-app
  namespace: staging
spec:
  hosts:
  - first-app
  http:
  - route:
    - destination:
        host: first-app
        subset: v1
      weight: 80 
    - destination:
        host: first-app
        subset: v2
      weight: 20
